--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Today and so on
 page-title: Today and so on
-home-title: Today and so on
+home-title: #Study, #Happiness
 description: #Study
 ---
 
