--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Today and so on
-page-title: Today and so on
-home-title: #Study, #Happiness
+page-title: #Study, #Happiness
+home-title: title
 description: #Study
 ---
 
