--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Today and so on
-page-title: #Study, #Happiness
+page-title: #Study
 home-title: title
 description: #Study
 ---
