--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Today and so on
-page-title: #Study
-home-title: title
+page-title: Forever and ever
+home-title: #Study
 description: #Study
 ---
 
