--- a/study.html
+++ b/study.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 标签
-page-title: tags
-home-title: Let's pick something.
+title: Study Section
+page-title: What did I do today?
+home-title: 
 description:
 ---
 
