--- a/timeline.html
+++ b/timeline.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Journal
-page-title: Journal
+title: 时间线
+page-title: timeLine
 home-title: Sort by timeline.
-description:My Journals
+description:
 ---
 
 {% include header.html %}
