--- a/timeline.html
+++ b/timeline.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 时间线
+title: timeLine
 page-title: timeLine
-home-title: Sort by timeline.
+home-title: 나의 활동들
 description:
 ---
 
