--- a/timeline.html
+++ b/timeline.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: timeLine
-page-title: timeLine
-home-title: 나의 활동들
+page-title: 나의 활동들
+home-title: 
 description:
 ---
 
