--- a/timeline.html
+++ b/timeline.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: timeLine
-page-title: 나의 활동들
-home-title: 
+page-title: TimeLine
+home-title: 내 활동들
 description:
 ---
 
