--- a/study.html
+++ b/study.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Study Section
-page-title: What did I do today?
+page-title: Do What You Can
 home-title: 
 description:
 ---
