--- a/about.html
+++ b/about.html
@@ -22,8 +22,14 @@ description:
         {% endif %}
             <hr>
             <h4>보유 기술 및 능력</h4>
+            <div>JAVA</div>
+            <div>Spring framework</div>
+            <div>Java Script</div>
             <hr>
             <h4>경력</h4>
+            <div>
+                <h5></h5>
+            </div>
             <hr>
             <h4></h4>
         {% if site.SNS %}
