--- a/about.html
+++ b/about.html
@@ -21,14 +21,29 @@ description:
           {% endif %}
         {% endif %}
             <hr>
-            <h4>보유 기술 및 능력</h4>
-            <div>JAVA</div>
-            <div>Spring framework</div>
-            <div>Java Script</div>
-            <hr>
-            <h4>경력</h4>
             <div>
-                <h5></h5>
+                <h5>보유 기술 및 능력</h5>
+                <div>
+                    <ul>
+                        <li>Java</li>
+                        <li>Spring framework</li>
+                        <li>Javascript</li>
+                        <li>ajax</li>
+                        <li>postgreSQL</li>                        
+                    </ul>
+                </div>
+
+            </div>
+            
+            <hr>
+            
+            <div>
+                <h5>경력</h5>
+                <div>
+                    <h6>프렌츠</h6>
+                    <p>기간 : 2020.09 ~ </p>
+                    <p>사용 스택 : Java, Spring, Javascript, ajax, postgreSQL, mybatis</p>
+                </div>
             </div>
             <hr>
             <h4></h4>
