--- a/about.html
+++ b/about.html
@@ -56,9 +56,8 @@ description:
                     <p>기간 : 2020.09 ~ </p>
                     <p>사용 언어: Java, Javascript</p>
                     <p>프레임워크: Spring framework</p>
-                    <p><ul>
-                        <li>어려웠던 점이나 등등 여기 넣기</li>
-                    </ul></p>
+                    <p>랜딩 페이지의 백엔드 개발 담당<br>
+                    </p>
                 </div>
                 
             </div>
